added errors files

--- a/RegexStringMatchTime/RegExTest/RegExTest.csproj
+++ b/RegexStringMatchTime/RegExTest/RegExTest.csproj
@@ -48,6 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Errors\SimulationErrors.xlsx" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Errors\SimulationErrorsKB.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
