--- a/RegexStringMatchTime/RegExTest/RegExTest.csproj
+++ b/RegexStringMatchTime/RegExTest/RegExTest.csproj
@@ -35,6 +35,8 @@
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,8 +45,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalculateRegexProcessingTime.cs" />
+    <Compile Include="ErrorsService.cs" />
+    <Compile Include="ErrorType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Error.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
